@@ -1,0 +1,7 @@
+
+package Inline17_Pkg1 is
+
+   procedure Test;
+   pragma Inline (Test);
+
+end Inline17_Pkg1;
